fixed a Bug #4998 "--protocol doesn't reject bad values"