client/mysqlbinlog.cc
@@ -633,8 +633,7 @@ get_one_option(int optid, const struct my_option *opt __attribute__((unused)),
     break;
   case OPT_MYSQL_PROTOCOL:
   {
-    if ((opt_protocol= find_type(argument, &sql_protocol_typelib,0)) ==
-	~(ulong) 0)
+    if (!(opt_protocol= find_type(argument, &sql_protocol_typelib,0)))
     {
       fprintf(stderr, "Unknown option to protocol: %s\n", argument);
       exit(1);
